force-app/main/default/objects/Opportunity/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Acquirer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>