force-app/main/default/objects/Opportunity/fields/Audit_Partner__c.field-meta.xml
<CustomField>
    <fullName>Audit_Partner__c</fullName>
    <label>Audit Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>