force-app/main/default/objects/Opportunity/fields/BTC_THG_PCC_Estimate_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BTC_THG_PCC_Estimate_Approval_Status__c</fullName>
    <label>BTC, THG, PCC Estimate Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>