force-app/main/default/objects/Opportunity/fields/BTC_THG_PCC_Estimate_Approved__c.field-meta.xml
<CustomField>
    <fullName>BTC_THG_PCC_Estimate_Approved__c</fullName>
    <formula>IF(TEXT(BTC_THG_PCC_Estimate_Approval_Status__c) = &apos;Approved&apos;, &apos;✅&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTC, THG, PCC Estimate Approved</label>
    <type>Text</type>
</CustomField>