force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <label>Close Lost Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>