force-app/main/default/objects/Opportunity/fields/Confidential_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Notes__c</fullName>
    <label>Confidential Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>