force-app/main/default/objects/Opportunity/fields/Confidential_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Opportunity__c</fullName>
    <label>Confidential Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CP Law</fullName>
            </value>
            <value>
                <fullName>UHNWI</fullName>
            </value>
            <value>
                <fullName>Sports and Media</fullName>
            </value>
            <value>
                <fullName>Ring Fenced</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>Pensions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>