force-app/main/default/objects/Opportunity/fields/Corporate_Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Finance_Notes__c</fullName>
    <label>Corporate Finance Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>