force-app/main/default/objects/Opportunity/fields/CT_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>