force-app/main/default/objects/Opportunity/fields/Cumulative_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Stage_Duration__c</fullName>
    <label>Cumulative Stage Duration</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>