force-app/main/default/objects/Opportunity/fields/Current_Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Start_Date__c</fullName>
    <label>Current Stage Start Date</label>
    <type>DateTime</type>
</CustomField>