force-app/main/default/objects/Opportunity/fields/DA_meeting_date__c.field-meta.xml
<CustomField>
    <fullName>DA_meeting_date__c</fullName>
    <label>DA meeting date</label>
    <type>Date</type>
</CustomField>