force-app/main/default/objects/Opportunity/fields/Date_of_first_interaction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_interaction__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of first interaction</label>
    <type>Date</type>
</CustomField>