force-app/main/default/objects/Opportunity/fields/Date_of_Proposal_Being_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Proposal_Being_Submitted__c</fullName>
    <label>Date of Proposal Being Submitted</label>
    <type>Date</type>
</CustomField>