force-app/main/default/objects/Opportunity/fields/Dating_Game_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Dating_Game_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dating Game Dashboard</label>
    <type>Checkbox</type>
</CustomField>