force-app/main/default/objects/Opportunity/fields/Days_since_the_proposal_was_sent__c.field-meta.xml
<CustomField>
    <fullName>Days_since_the_proposal_was_sent__c</fullName>
    <formula>TODAY() - Proposal_Send_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since the proposal was sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>