force-app/main/default/objects/Opportunity/fields/Deal_Details__c.field-meta.xml
<CustomField>
    <fullName>Deal_Details__c</fullName>
    <label>Deal Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>