force-app/main/default/objects/Opportunity/fields/Deal_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Team__c</fullName>
    <label>Deal Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>