force-app/main/default/objects/Opportunity/fields/Est_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Close_Date__c</fullName>
    <label>Est. Close Date</label>
    <type>Date</type>
</CustomField>