force-app/main/default/objects/Opportunity/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Estimate</label>
    <referenceTo>ffscpq__Estimate__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>