force-app/main/default/objects/Opportunity/fields/Estimated_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fees__c</fullName>
    <description>1</description>
    <label>Estimated Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>