force-app/main/default/objects/Opportunity/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <description>1</description>
    <label>Incumbent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>