force-app/main/default/objects/Opportunity/fields/Law_Estimate_Approved__c.field-meta.xml
<CustomField>
    <fullName>Law_Estimate_Approved__c</fullName>
    <formula>IF(TEXT(Law_Estimate_Approval_Status__c) = &apos;Approved&apos;, &apos;✅&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Estimate Approved</label>
    <type>Text</type>
</CustomField>