force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost - Chemistry With Our People</fullName>
            </value>
            <value>
                <fullName>Lost - Overridden By Decision With 3rd Parties</fullName>
            </value>
            <value>
                <fullName>Lost - International Network</fullName>
            </value>
            <value>
                <fullName>Lost - IPO Expertise</fullName>
            </value>
            <value>
                <fullName>Lost - Location</fullName>
            </value>
            <value>
                <fullName>Lost - Other</fullName>
            </value>
            <value>
                <fullName>Lost - Price</fullName>
            </value>
            <value>
                <fullName>Lost - Sector Credentials</fullName>
            </value>
            <value>
                <fullName>Lost - Staying with Incumbent</fullName>
            </value>
            <value>
                <fullName>Lost - Technical Expertise</fullName>
            </value>
            <value>
                <fullName>Lost - Want Big / Small Firm</fullName>
            </value>
            <value>
                <fullName>Declined - CP Business Conflict</fullName>
            </value>
            <value>
                <fullName>Declined - Other</fullName>
            </value>
            <value>
                <fullName>Declined - Poor Fit For CP</fullName>
            </value>
            <value>
                <fullName>Declined - Timescale Delivery Unachievable</fullName>
            </value>
            <value>
                <fullName>Went Away - Other</fullName>
            </value>
            <value>
                <fullName>Went Away - Postponed</fullName>
            </value>
            <value>
                <fullName>Went Away - Withdrawn</fullName>
            </value>
            <value>
                <fullName>Audit Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>