force-app/main/default/objects/Opportunity/fields/Meeting_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Subtype__c</fullName>
    <label>Meeting Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Meeting</fullName>
            </value>
            <value>
                <fullName>Follow up Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>