force-app/main/default/objects/Opportunity/fields/Opportunity_Area__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Area__c</fullName>
    <label>Opportunity Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Area</valueSetName>
    </valueSet>
</CustomField>