force-app/main/default/objects/Opportunity/fields/Opportunity_Summary_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Summary_2__c</fullName>
    <label>Opportunity Summary 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>