force-app/main/default/objects/Opportunity/fields/OriginalProject__c.field-meta.xml
<CustomField>
    <fullName>OriginalProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Opportunities (Original Project)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>