force-app/main/default/objects/Opportunity/fields/PE_Backed__c.field-meta.xml
<CustomField>
    <fullName>PE_Backed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE Backed</label>
    <type>Checkbox</type>
</CustomField>