force-app/main/default/objects/Opportunity/fields/Potential_deal_size__c.field-meta.xml
<CustomField>
    <fullName>Potential_deal_size__c</fullName>
    <label>Potential deal size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>