force-app/main/default/objects/Opportunity/fields/Private_Corporate_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Private_Corporate_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Corporate Opportunity?</label>
    <type>Checkbox</type>
</CustomField>