force-app/main/default/objects/Opportunity/fields/Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Sent</label>
    <type>Checkbox</type>
</CustomField>