force-app/main/default/objects/Opportunity/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Provided</fullName>
            </value>
            <value>
                <fullName>System Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>