force-app/main/default/objects/Opportunity/fields/Short_Term_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short Term Opportunity</label>
    <type>Checkbox</type>
</CustomField>