force-app/main/default/objects/Opportunity/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <label>Status Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>