force-app/main/default/objects/Opportunity/fields/THG_Partner_Approved__c.field-meta.xml
<CustomField>
    <fullName>THG_Partner_Approved__c</fullName>
    <formula>IF(TEXT(THG_Audit_Partner_Approval_Status__c) = &quot;Approved&quot;,&quot;✅&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THG Partner Approved</label>
    <type>Text</type>
</CustomField>