force-app/main/default/objects/Opportunity/fields/THG_Resourcing_Approved__c.field-meta.xml
<CustomField>
    <fullName>THG_Resourcing_Approved__c</fullName>
    <formula>IF(TEXT(THG_Audit_Resourcing_Approval_Status__c)= &quot;Approved&quot;, &quot;✅&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THG Resourcing Approved</label>
    <type>Text</type>
</CustomField>