force-app/main/default/objects/Opportunity/fields/Total_Sales_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Turnover__c</fullName>
    <label>Total Sales / Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>