force-app/main/default/objects/Opportunity/fields/Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Project__c</fullName>
    <label>Type of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FDD</fullName>
            </value>
            <value>
                <fullName>VDD</fullName>
            </value>
            <value>
                <fullName>Vendor Assist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>