force-app/main/default/objects/Opportunity/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>