force-app/main/default/objects/Opportunity/validationRules/Only_lowest_level_practice_can_be_select.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_lowest_level_practice_can_be_select</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(pse__Practice__c) &amp;&amp; NOT(ISNULL(pse__Practice__c)) &amp;&amp; pse__Practice__r.pse__Hierarchy_Depth__c &lt; 3</errorConditionFormula>
    <errorDisplayField>pse__Practice__c</errorDisplayField>
    <errorMessage>Only the lowest level practices are allowed</errorMessage>
</ValidationRule>