force-app/main/default/objects/Opportunity/validationRules/V1_Acquirer_Required_for_Completed_Deal.validationRule-meta.xml
<ValidationRule>
    <fullName>V1_Acquirer_Required_for_Completed_Deal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
ISCHANGED( StageName ),
TEXT(StageName) = &quot;Completed Deal&quot;,
ISBLANK( Acquirer__c ))</errorConditionFormula>
    <errorDisplayField>Acquirer__c</errorDisplayField>
    <errorMessage>Please ensure you have added an Acquirer to the Opportunity before Completing the deal.</errorMessage>
</ValidationRule>