force-app/main/default/objects/Opportunity/listViews/ffscpq__Opportunities_Closing_in_Next_30_Days.listView-meta.xml
<ListView>
    <fullName>ffscpq__Opportunities_Closing_in_Next_30_Days</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Opportunities Closing in Next 30 Days</label>
</ListView>